--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -520,16 +520,21 @@ ROM_placate_the_king:0 "Placate the King"
 ROM_strong_arm_parliament:0 "Strong Arm Parliament"
 ROM_victory_in_hungarian_war:0 "Victory against Hungary... again"
 ROM_rebuild_transylvania:0 "Rebuild Transylvania"
-ROM_ensure_hungarian_weakness:0 "Guarantee Hungarian Weakness"
+ROM_ensure_hungarian_weakness:0 "Guarantee [HUN.GetAdjective] Weakness"
 ROM_realisation_of_greater_romania:0 "Realize Greater Romania"
 ROM_promote_romanian_language:0 "Promote the Romanian Language"
 ROM_defeat_in_hungarian_war:0 "Defeat against Hungary"
 ROM_suppress_use_of_hungarian_in_szekelyfold:0 "Suppress Hungarian in [778.GetName]"
+ROM_invite_serbia_to_little_entente:0 "Invite [SER.GetName] to Little Entente"
+ROM_serbian_intervention_in_hungarian_conflict:0 "Seek [SER.GetAdjective] Intervention"
 ## -- TOOLTIPS -- ##
+ROM_serbia_little_entente_fail:0 "§W[SER.GetNameWithFlag] §W§Rrefuses§R§W to join the §W§YRomanian-Hungarian War§Y§W"
 depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
-ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
-ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
+ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
+ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
+ROM_war_has_ended_victory2:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§Y[ROM.GetAdjective]-[HUN.GetAdjective] War§Y§W"
+ROM_war_has_ended_lost2:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§Y[ROM.GetAdjective]-[HUN.GetAdjective] War§Y§W"
 ROM_depends_on_event.tt:0 "§WThis focus will be §W§Gautocompleted§G§W with the options of the '§W§YA Question of Priorities§Y§W' event above.§W"
 ROM_commissioned_plane:0 "Has received plane commission"
 ROM_aurel_vlaicu.tt:0 "§WRetire §W§YAurel Vlaicu§Y§W from §W§YRomania§Y§W"
@@ -634,7 +639,7 @@ kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §Y
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
 kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YConstantin Arion§! of the §cPC§! to form a government"
 ROM_armistice_of_focsani:0 "White Peace [ROM.GetNameWithFlag] and [GER.GetNameWithFlag]"
-ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
+ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina, the Southern Carpathians, and the Eastern Carpathians."
 ROM_more_likely_if_thing.tt:0 "§WThey will be §Y§Gmore likely§G§W to accept if:\n- Has a high opinion of us\n- Is in a faction with us\n- Is fighting a war together"
 ROM_tbotr.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§!\n£construction_speed_texticon Construction Speed: §R-5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §G-0.15§!"
 ROM_has_war_hungarian.tt:0 "§WThis focus will be §W§Gautocompleted§G§W once the Romanian-Hungarian war starts.§W"
@@ -980,6 +985,18 @@ ww1_romania.103.t:0 "Should we annex more Hungarian land?"
 ww1_romania.103.d:0 "[HUN.GetName] has been defeated in their war with us, so the question is should we upset the Hungarians even more and take [154.GetName]?"
 ww1_romania.103.a:0 "Greater Romania's prophecy will be fullfilled!"
 ww1_romania.103.b:0 "On second thought..."
+ww1_romania.104.t:0 "Romania invites us to intervene in the Romanian-Hungarian War"
+ww1_romania.104.d:0 "Romania invited our representative to the embassy today and asked us officially if we would want to join the conflict between them and Hungary."
+ww1_romania.104.a:0 "Of course."
+ww1_romania.104.b:0 "Neutrality is the way, even against the Hungarians."
+ww1_romania.105.t:0 "Serbia accepts to join our war!"
+ww1_romania.105.d:0 "Serbia accepted to join our war against the Hungarian Red menace."
+ww1_romania.105.a:0 "Great!"
+ww1_romania.106.t:0 "Serbia has refused to join our war"
+ww1_romania.106.d:0 "Serbia has refused to join our excursion against the Hungarian red memace."
+ww1_romania.106.a:0 "We had an alliance..."
+ww1_romania.106.b:0 "You win some, you lose some."
+
 ## -- IDEAS -- ##
 ROM_unionist_zeal:0 "Unionist Zeal"
 ROM_unionist_zeal_desc:0 "Ever since the unification in 1859 the dream of reuniting the romanian people from both sides of the Carphatians and those from over the Prut river has been the nation's dream, a Romania for romanians."
