--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -240,7 +240,7 @@ ROM_restructure_the_army:0 "Restructure the Army"
 ROM_restructure_the_army_desc:0 "The Romanian Armed Forces is one of the largest militaries in the Balkans, but is ill-equipped, untrained and inexperienced. With the help of our allies, we can finally change this."
 ROM_political_unity:0 "Political Unity"
 ROM_political_unity_desc:0 ""
-ROM_for_the_truth:0 "For Romania! For the Truth!"
+ROM_for_the_truth:0 "Pe Aici nu se Trece!"
 ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
 ROM_lessons_from_carpathian_defense:0 "Against All Odds!"
 ROM_lessons_from_carpathian_defense_desc:0 ""
@@ -575,18 +575,18 @@ ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max
 ROM_prah_f2.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+10.00%§!"
 ROM_prah_f3.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+5.00%§!"
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!\n£stability_texticon Stability: §G+5.00%§!"
-ROM_impfort.tt:0 "Modify §YRomanian Economy§! by\n£fort_texticon §YLand Fort§Y§W Speed: §G+50.00%§!"
+ROM_impfort.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_landfort_texticon §YLand Fort§Y§W Speed: §G+50.00%§!"
 ROM_otb.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 ROM_efi:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
-ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
-ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
-ROM_mifocus:0 "Modify §YRomanian Economy§! by\nStability: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
-ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
+ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n£construction_speed_milfactory_texticon §YMilitary Factory§! construction speed: §G+10.00%§!"
+ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n£construction_speed_milfactory_texticon §YMilitary Factory§! construction speed: §G+15.00%§!\n£stability_texticon Stability: §R-10.00%§!"
+ROM_mifocus:0 "Modify §YRomanian Economy§! by\n£stability_texticon Stability: §G+5.00%§!\n£efficiency_growth_texticon Production Efficiency growth: §G+5.00%§!"
+ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£efficiency_growth_texticon Production Efficiency growth: §G+5.00%§!"
 ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_talk_tuah.tt:0 "Modify §YRomanian Economy§! by\nConsumer Goods Factories factor: §Y-10.0%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£factory_output_texticon Factory Output: §G+5.00%§!"
-ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §G+5.00%§!"
+ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!\n£stability_texticon Stability: §G+5.00%§!"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_edd.tt:0 "Modify §YRomanian Economy§! by\n£dockyard_output_texticon Dockyard Output: §G+5.00%§!"
 ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
@@ -1069,6 +1069,12 @@ ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
 ROM_recently_raided:0 "Recently Raided"
 ROM_promoted_romanian_language:0 "Promoted Romanian Language"
 ROM_unionist_zeal2:0 "Unionist Zeal"
+ROM_occupation_costs_rom:0 "Central Powers Occupation Costs"
+
+
+
+
+
 ## -- DECISIONS -- ##
 ROM_national_opposition:0 "National Opposition"
 ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: [old_guard_status]\n\nThe §rPDSR§! is currently: [pdsr_status]!\n\nThe §lPNL§! is currently: §Rorganized§! in complete §Ropposition§! to §YCarp§!\n\nThe §mPCD§! is currently: §Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!\n\nThe §Cpeasants§! are currently: [peasant_status]"
