checks and rename

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -424,7 +424,7 @@ ROM_support_industrialists:0 "Support Industrialists"
 ROM_agricultural_knowledge:0 "New Agricultural Techniques"
 ROM_government_aid_to_industries:0 "Aid Construction of New Factories"
 ROM_move_away_from_an_export_based_economy:0 "Move Away From an Export-Based Economy"
-ROM_doubuja_steel_industry:0 "Dobrujan Steel Industry"
+ROM_doubuja_steel_industry:0 "Moldovan Steel Industry"
 ROM_expand_doubruja_dockyards:0 "Expand Danube Ports"
 ROM_increase_cereal_exports:0 "Increase Cereal Exports"
 ROM_ramp_up_exports_of_fruit_grains_and_seeds:0 "Ramp Up Exports of Grains Fruits and Seeds"
