politics go brr

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8704,6 +8704,29 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  POR_deploy_garrison_troops_in_lisbon:0 "Deploy Garrison Troops in Lisbon"
  POR_deploy_garrison_troops_in_lisbon_desc:0 ""
 
+ POR_chamber_of_deputies:0 "Chamber of Deputies"
+ POR_chamber_of_deputies_desc:0 ""
+ POR_suppress_monarchist_and_clerical_opposition:0 "Suppress Monarchist and Clerical Opposition"
+ POR_suppress_monarchist_and_clerical_opposition_desc:0 ""
+ POR_national_stability_act:0 "National Stability Act"
+ POR_national_stability_act_desc:0 ""
+ POR_law_of_separation_of_church_and_state_decision:0 "Law of Separation of Church and State"
+ POR_law_of_separation_of_church_and_state_decision_desc:0 ""
+ POR_compose_republican_constitution_mission:0 "Writing the Republican Constitution"
+ POR_compose_republican_constitution_mission_desc:0 ""
+ POR_compose_republican_constitution_flag:0 "The Republican Constitution is being drafted"
+
+ POR_1911_election_process:0 "The Portuguese Presidential Elections of 1911"
+ POR_1911_election_process_desc:0 ""
+ POR_support_arriaga:0 "Campaign for Manuel de Arriaga"
+ POR_support_arriaga_desc:0 ""
+ POR_support_machado:0 "Campaign for Bernardino Machado"
+ POR_support_machado_desc:0 ""
+ POR_campaign_in_rural_areas:0 "Hold Rallies in Rural Areas"
+ POR_campaign_in_rural_areas_desc:0 ""
+ POR_visit_to_the_heartland:0 "Visit to the Heartland"
+ POR_visit_to_the_heartland_desc:0 ""
+
  POR_operation_guarnicao:0 "Operation Guarnição"
  POR_operation_guarnicao_desc:0 ""
 
