--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10830,25 +10830,26 @@ POR_pillar_of_democracy:0 "Pillar of Democracy"
 POR_pillar_of_democracy_desc:0 ""
 POR_popular_way:0 "Popular Way"
 POR_popular_way_desc:0 ""
-POR_popular_way_tt:0 "The §YChamber of Deputies§! will be replaced with the §YNational Constituent Assembly§!"
-POR_follow_the_prominent_movement:0 "Follow the Prominent Movement"
-POR_follow_the_prominent_movement_desc:0 ""
+POR_popular_way_tt:0 "The §YChamber of Deputies§! will be temporarily replaced with the §YNational Constituent Assembly§!"
 POR_interim_republic:0 "The Interim Republic"
 POR_interim_republic_desc:0 ""
 POR_fractured_society:0 "A Fractured Society"
 POR_fractured_society_desc:0 ""
+POR_fractured_society_tt:0 ""
 POR_law_of_separation_of_church_and_state:0 "Lei da Separação"
 POR_law_of_separation_of_church_and_state_desc:0 ""
-POR_seize_clerical_property:0 "Seize Clerical Property"
+POR_seize_clerical_property:0 "Nationalize Clerical Property"
 POR_seize_clerical_property_desc:0 ""
-POR_compose_republican_constitution:0 "Compose The Republican Constitution"
+POR_compose_republican_constitution:0 "Compose The Fourth Constitution"
 POR_compose_republican_constitution_desc:0 ""
+POR_compose_republican_constitution_tt:0 "Will start a §Ychain of events§! in which the government will be able to decide on the §Ycontents§! of the new constitution."
 POR_stabilize_trade_unions:0 "Stabilize Trade Unions"
 POR_stabilize_trade_unions_desc:0 ""
 POR_countryside_support:0 "Pursue Countryside Support"
 POR_countryside_support_desc:0 ""
 POR_bicameralism_legislature:0 "Bicameralism Legislature"
 POR_bicameralism_legislature_desc:0 ""
+POR_bicameralism_legislature_tt:0 "The §YChamber of Deputies§! will be reinstituted, which will remove the §YNational Constituent Assembly§!"
 POR_side_with_radical_republicans:0 "Side with the Radical Republicans"
 POR_side_with_radical_republicans_desc:0 ""
 POR_voice_of_arriga:0 "The Voice of Arriga"
