--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3141,6 +3141,19 @@ POR_republican_protests:0 "City-wide Republican Protests"
 POR_republican_protests_desc:0 ""
 POR_action_against_mutiny:0 "Action Against Mutiny"
 POR_action_against_mutiny_desc:0 ""
+POR_persisting_social_outrage:0 "Persisting Social Outrage"
+POR_persisting_social_outrage_desc:0 ""
+POR_persisting_social_outrage_tt:0 "\n If stability gets §Rbelow 20%§!, the army will §Ycoup§! the government to restore order."
+POR_persisting_social_outrage_1:0 "Persisting Social Outrage"
+POR_persisting_social_outrage_1_desc:0 ""
+POR_persisting_social_outrage_2:0 "Persisting Social Outrage"
+POR_persisting_social_outrage_2_desc:0 ""
+POR_law_of_separation_of_church_and_state_idea:0 "Seperation of Church and State"
+POR_law_of_separation_of_church_and_state_idea_desc:0 ""
+POR_law_of_separation_of_church_and_state_idea_1:0 "Seperation of Church and State"
+POR_law_of_separation_of_church_and_state_idea_1_desc:0 ""
+POR_state_controlled_church_possessions:0 "State-Controlled Church Possessions"
+POR_state_controlled_church_possessions_desc:0 ""
 
  #Monaco
  MCO_monte_carlo_casino:0 "Monte Carlo Casino"
