--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -521,6 +521,11 @@ ROM_defeat_in_hungarian_war:0 "Defeat against Hungary"
 ROM_suppress_use_of_hungarian_in_szekelyfold:0 "Suppress Hungarian in [778.GetName]"
 ROM_invite_serbia_to_little_entente:0 "Invite [SER.GetName] to Little Entente"
 ROM_serbian_intervention_in_hungarian_conflict:0 "Seek [SER.GetAdjective] Intervention"
+
+
+
+
+
 ## -- TOOLTIPS -- ##
 ROM_serbia_little_entente_fail:0 "§W[SER.GetNameWithFlag] §W§Rrefuses§R§W to join the §W§YRomanian-Hungarian War§Y§W"
 depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
@@ -637,6 +642,7 @@ ROM_more_likely_if_thing.tt:0 "§WThey will be §Y§Gmore likely§G§W to accept
 ROM_tbotr.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§!\n£construction_speed_texticon Construction Speed: §R-5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §G-0.15§!"
 ROM_has_war_hungarian.tt:0 "§WThis focus will be §W§Gautocompleted§G§W once the Romanian-Hungarian war starts.§W"
 ROM_armistice_of_focsani_completed:0 "Signed the Armistice of Focsani"
+this_will_lead_war_hungary.tt:0 "§WThis will lead to §W§Rwar§R§W with Hungary"
 ### -- EVENTS -- ##
 ww1_romania.78.t:0 "The 'Swamp' Demand Protection"
 ww1_romania.78.d:0 "The so-called swamp of Romanian politics, consisting of unelected appointed government positions, often in which jobs are given to friends and family, are opposing our governments campaign to help reduce corruption in government. Those in the PNL in particular are demanding protection from these efforts, and are threatening to oppose our government if we don't"
@@ -882,10 +888,6 @@ ww1_romania.74.a:0 "What will the people say?"
 ww1_romania.82.d:0 "Seeing that they are almost encircled and with loss of their capital, Hungarian Soviet government capitulated. While we couldn't capture Bela Kun, who escaped to Russia, we captured others. Now the question is, do we really need to occupy them and experience constant unrests there, or do we let them go with non communist government?"
 ww1_romania.82.a:0 "We won, we will get our core land"
 ww1_romania.82.b:0 "We aren't satisfied with just our rightful land, they shall be punished"
-ww1_romania.81.t:0 "Hungarian Revolution"
-ww1_romania.81.d:0 "Seeing that our new neighbour has peacefully surrendered to communist menace, we are in danger. The Communist Party of Hungary is built on Revanchist policies that wish to carve up our land! Our friends with similar problems will support us in the struggle. Do we strike first?"
-ww1_romania.81.a:0 "Down with the Reds!"
-ww1_romania.81.b:0 "We need to recover from the war first..."
 ww1_romania.82.t:0 "Hungarian Soviet capitulates"
 ww1_romania.85.t:0 "Election Results of Greater Romania"
 ww1_romania.85.d:0 "Blah write it lol"
@@ -987,6 +989,14 @@ ww1_romania.106.t:0 "Serbia has refused to join our war"
 ww1_romania.106.d:0 "Serbia has refused to join our excursion against the Hungarian red memace."
 ww1_romania.106.a:0 "We had an alliance..."
 ww1_romania.106.b:0 "You win some, you lose some."
+ww1_romania.109.t:0 "[HUN.GetName] does not recognize the demarcation in the Vix Note!"
+ww1_romania.109.d:0 "The Vix Note, named after French general Fernand Vix, has given the Hungarians a communication note giving them the border between them and Romania dictated in the Paris Peace conference. The Hungarians do not accept the new border demarcation."
+ww1_romania.109.a:0 "This is a violation of international boundaries!"
+ww1_romania.81.t:0 "Hungarians do not back down from Versailles demarcation"
+ww1_romania.81.d:0 "The Hungarians still refuse to accept the new borders delivered to them by Ferdinand Vix."
+ww1_romania.81.a:0 "We need to intervene"
+ww1_romania.81.b:0 "We need to recover from the war first..."
+
 
 ## -- IDEAS -- ##
 ROM_unionist_zeal:0 "Unionist Zeal"
