--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -110,7 +110,7 @@ ROM_study_enemy_cartography_desc:0 "The General Staff has requested maps to be m
 ROM_general_directorate_of_munitions:0 "The General Directorate of Munitions"
 ROM_expansion_of_the_officer_corp:0 "Expand the Officer Corps"
 ROM_build_a_domesic_arms_industry:0 "An Issue of National Security"
-ROM_beggers_cant_be_chosers:0 "Beggars Can't Be Choosers"
+ROM_beggers_cant_be_chosers:0 "Mass Importation of Foreign Equipment"
 ROM_a_common_divison_structure:0 "A Common Division Structure"
 ROM_restructure_the_high_command:0 "Reshuffle the High Command"
 ROM_training_schools:0 "Open Up Training Schools"
@@ -580,7 +580,14 @@ ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Fact
 ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_talk_tuah.tt:0 "Modify §YRomanian Economy§! by\nConsumer Goods Factories factor: §Y-10.0%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£factory_output_texticon Factory Output: §G+5.00%§!"
+
+ROM_mife.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+20.0%§!"
+
+
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!\n£stability_texticon Stability: §G+5.00%§!"
+ROM_end_foreign_purchases:0 "Reduce Foreign Equipment Purchases"
+ROM_mife2.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-20.0%§"
+
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_edd.tt:0 "Modify §YRomanian Economy§! by\n£dockyard_output_texticon Dockyard Output: §G+5.00%§!"
 ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
