requested loc tweaks

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -487,8 +487,8 @@ GER_memories_of_1871:0 "Memories of 1871"
 GER_treading_the_centre_line:0 "Treading the Centre Line"
 GER_the_growing_pan_german_influence:0 "The Growing Pan-German Influence"
 GER_prussian_militarism_at_its_finest:0 "Prussian Militarism at its Finest"
-GER_campaining_for_the_german_identity:0 "Campaining for the German Identity"
-GER_adressing_the_matter_of_german_identity:0 "Adressing the Matter of German Identity"
+GER_campaining_for_the_german_identity:0 "Campaigns for the German Identity"
+GER_adressing_the_matter_of_german_identity:0 "Adress the Matter of German Identity"
 GER_an_empire_of_many_peoples:0 "An Empire of Many Peoples..."
 GER_but_a_german_empire_first:0 "... But a German One First!"
 
@@ -504,7 +504,7 @@ GER_krupp_contracts:0 "Vickers-Krupp Cooperation"
 GER_expansion_of_shipyards:0 "Pass the Fith Naval Expansion Act"
 GER_utilise_the_navy_league:0 "Utilise the Navy Leauge"
 GER_demand_angola:0 "Tackle Portugal's ''Debt''"
-GER_sell_ships_to_russia:0 "Selling Ships to Russia"
+GER_sell_ships_to_russia:0 "Sell Ships to Russia"
 GER_bigger_guns:0 "Bigger Guns, Bigger Hulls, Bigger Ships"
 GER_the_influence_of_sea_power:0 "The Influence of Sea Power"
 GER_u_nineteen:0 "Develop the U-19"
@@ -543,7 +543,7 @@ GER_politische_abteilung:0 "Politische Abteilung"
 GER_advance_germania:0 "Advance Germania"
 GER_the_front_stalls:0 "The Front Stalls"
 GER_introduce_rationing_measures:0 "Bolster Rationing Measures"
-GER_financing_the_war_economy:0 "Financing the War Economy"
+GER_financing_the_war_economy:0 "Finance the War Economy"
 GER_collaborating_with_trade_unions:0 "Collaborating with Trade Unions"
 GER_revived_anti_socialist_laws:0 "Revive Anti-Socialist Laws"
 GER_nachrichtenabteilung:0 "Nachrichtenabteilung"
@@ -569,13 +569,13 @@ GER_obscuring_our_defeats:0 "Obscure our Defeats"
 GER_secure_loyalty_of_unions:0 "Secure the loyalty of Unions"
 GER_concessions_to_spd:0 "Concessions to the SPD"
 GER_restoration_of_belgium:0 "Restoration of Belgium"
-GER_commiting_to_the_september_programme:0 "Commiting to the September Programme"
+GER_commiting_to_the_september_programme:0 "Commit to the September Programme"
 GER_the_enabling_act:0 "The Enabling Act"
 GER_keeping_the_bundestrat_in_check:0 "Keeping the Bundestrat in Check"
 GER_burgfriedenspolitik_successful:0 "Burgfriedenspolitik Successful"
 GER_the_price_of_italy:0 "The Price of Italy"
 GER_defeating_tirpitz:0 "Defeating Tirpitz"
-GER_reperations_to_the_americans:0 "Reperations to the Americans"
+GER_reperations_to_the_americans:0 "Pay Reperations to the Americans"
 GER_the_coalition_forgotten:0 "The Coalition Forgotten"
 GER_endorse_hindenburg:0 "Endorse Hindenburg"
 
