--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -244,6 +244,11 @@ ww1_germanrework.47.t:0 "Falkenhayn Removed as Chief of the Army"
  ww1_germanrework.47.d:0 ""
  ww1_germanrework.47.a:0 "Well good luck to Hindenburg"
 
+#Hollweg Pushed for Peace
+ww1_germanrework.48.t:0 "The Chancellor Pushes for Peace"
+ ww1_germanrework.48.d:0 ""
+ ww1_germanrework.48.a:0 "How dare he! The Kaiser must dismiss him at once"
+
 #Portugals "Debt" Event Chain
 #Germany asks for UK support for pressuring Portugal to give over Angola to Germany
 ww1_germanrework.52.t:0 "A request from Germany"
