wartime coalition, danes + poles conscription, gaine momentum idea and tweaks

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -40,8 +40,7 @@ GER_mass_produce_v_30:0 "V-30 Mass Production"
 GER_mass_produce_v_30_desc:0 ""
 GER_tirpitzs_grand_fleet_idea:0 "Tirpitz's Grand Fleet"
 GER_tirpitzs_grand_fleet_idea_desc:0 ""
-GER_nationalise_diamond_deposits:0 "Nationalise Colonial Diamond Deposits"
-GER_nationalise_diamond_deposits_desc:0 ""
+GER_nationalise_diamond_deposits:0 "Nationalised Colonial Diamond Deposits"
 GER_ohl_command:0 "OHL Command"
 GER_ohl_zentral:0 "OHL Command"
 GER_ohl_operation:0 "OHL Command"
@@ -66,6 +65,7 @@ GER_idea_national_debt_4:0 "Extreme National Debt"
 GER_idea_national_debt_4_desc:0 ""
 GER_lack_of_capital:0 "Unfinanced Budget"
 GER_lack_of_capital_desc:0 ""
+GER_gained_momentum:0 "Gained Momentum"
 
 #Put stuff in the right place Mici!
 GER_state_of_the_military:0 "State of the Military"
@@ -333,6 +333,26 @@ ww1_germanrework.70.t:0 "Germany backs down to France"
  ww1_germanrework.70.d:0  ""
  ww1_germanrework.70.a:0 "An unexpected betrayl"
 
+#Hollweg Wartime Coalition
+ww1_germanrework.49.t:0 "Wartime Coalition"
+ ww1_germanrework.49.d:0 ""
+ ww1_germanrework.49.a:0 "Peace in the Reichstag, war on the front"
+
+#Coalition Collapse
+ww1_germanrework.50.t:0 "The Coalition Collapses"
+ ww1_germanrework.50.d:0 ""
+ ww1_germanrework.50.a:0 "More power to the OHL!"
+
+#Coalition Cemented
+ww1_germanrework.51.t:0 "Coalition Cemented"
+ ww1_germanrework.51.d:0 ""
+ ww1_germanrework.51.a:0 "United for Germany"
+
+#Paris Captured before the front stalls
+ww1_germanrework.71.t:0 "Paris Captured"
+ ww1_germanrework.71.d:0 ""
+ ww1_germanrework.71.a:0 "Advance Germania!"
+
 #The Zabern Affair
 #A Crisis Stirs
 ww1_germanrework.26.t:0 "A Crisis Stirs"
@@ -365,6 +385,8 @@ GER_fleet_in_being_mission:0 "Fleet in Being"
 GER_smarter_navy_mission:0 "Smarter Navy"
 GER_national_debt_mission:0 "Growing Debt"
 GER_major_deficit_spending:0 "Major Deficit Spending"
+#Missions
+GER_coalition_lifespan:0 "The Coalition's Lifespan"
 
 #The Haldane Mission
 GER_preparing_for_the_haldane_mission:0 "Preparations for the Haldane Mission"
@@ -419,6 +441,7 @@ GER_failed_haldane_mission:0 "The Haldane Mission has failed"
 GER_successful_haldane_mission:0 "The Haldane Mission was successful"
 GER_1912_budget:0 "Attempting to Pass a New Budget"
 GER_taken_mob_of_morale_focus:0 " Has taken a §YMobilisation of Morale§! focus in the past §Y70 days§!."
+GER_hollweg_empowered:0 "Hollweg has been empowered in the aftermath of the Zabern Affair"
 
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole."
@@ -468,6 +491,7 @@ GER_solf_new_administration:0 "Solf's New Administration"
 GER_ohl_command:0 "OHL Command"
 GER_mobilisation_of_morale:0 "Mobilisation of Morale"
 GER_germanisation:0 "Germanisation"
+GER_enhanced_conscription:0 "Enhanced Conscription"
 
 #Focuses
 
@@ -561,7 +585,7 @@ GER_judenzahlung:0 "Judenzahlung"
 GER_expanding_abteilung_iiib_powers:0 "Expand Abteilung IIIb's Powers"
 GER_short_term_mass_mobilisation:0 "Short Term Mass Mobilisation"
 GER_ensure_letters_get_home:0 "Ensure Letters get Home"
-GER_conscripting_the_poles_and_danes:0 "Conscripting the Poles and the Danes"
+GER_conscripting_the_poles_and_danes:0 "Conscript the Poles and the Danes"
 GER_the_lindenburg_program:0 "The Hindenburg Program"
 GER_sending_disenters_to_the_front:0 "Send Disenters to the Front"
 GER_establishing_the_foreign_armies:0 "Establish the Foreign Armies"
