--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
 
 #Ideas
+GER_idea_victory_propaganda:0 "Victory Propaganda"
 GER_idea_bismarksche_reichsverassung:0 "Bismarksche Reichsverassung"
 GER_idea_bismarksche_reichsverassung_desc:0 ""
 GER_idea_naval_arms_race:0 "Naval Arms Race"
@@ -444,13 +445,15 @@ GER_taken_mob_of_morale_focus:0 " Has taken a §YMobilisation of Morale§! focus
 GER_hollweg_empowered:0 "Hollweg has been empowered in the aftermath of the Zabern Affair"
 
 #Tooltips
-ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole."
+ww1_germanytooltip1:0 "If [BEL.GetFlag]§YBelgium§! accepts our proposal we can expect the profit to §Gbenefit§! our economy as a whole."
 ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war"
 ww1_germanytooltip3:0 "This focus will be automatically completed if a §cconservative§! chancellor comes into power."
-ww1_germanytooltip4:0 "After completing this focus we will have to expand the navy by a set amount in a certain amount of time."
-ww1_germanytooltip5:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-British Chancellor, §rHollweg§!."
-ww1_germanytooltip6:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-navy Admiral, §cTirpitz§!."
-ww1_germanytooltip7:0 "Taking this focus will increase the Kaiser's support of §rHollweg§!."
+ww1_germanytooltip4:0 "After completing this focus we will have to expand the §cnavy§! by a set amount in a certain amount of time."
+ww1_germanytooltip5:0 "The preperations for the §YHaldane§! mission will begin, by picking this focus you are playing the perspective of the §rpro-British§! Chancellor, §rHollweg§!."
+ww1_germanytooltip6:0 "The preperations for the §YHaldane§! mission will begin, by picking this focus you are playing the perspective of the §cpro-navy§! Admiral, §cTirpitz§!."
+ww1_germanytooltip7:0 "Taking this focus will increase §YKaiser Wilhelm's§! support of §rHollweg§!."
+ww1_dem_reforms_after_war:0 "This will pressure §YHollweg§! to make §3democratic§! reforms after the war."
+
 ww1_germanytooltip8:0 "Taking this focus will increase the Kaiser's support of §cTirpitz§!."
 ww1_germanytooltip9:0 "§rHollweg's§! influence over the Kaiser has increased"
 ww1_germanytooltip10:0 "§cTirpitz's§! influence over the Kaiser has increased"
@@ -459,7 +462,7 @@ ww1_germanytooltip12:0 "This is a §Rleftist§! law."
 ww1_germanytooltip13:0 "This is a §gcentrist§! law."
 ww1_germanytooltip14:0 "This is a §3rightist§! law."
 ww1_germanytooltip15:0 "This law will correlate to the ideology of the chancellor."
-ww1_germanytooltip16:0 "This focus will reveal it's effects depending on the outcome of the Haldane mission."
+ww1_germanytooltip16:0 "This focus will reveal it's §Yeffects§! depending on the outcome of the §YHaldane§! mission."
 ww1_germanytooltip17:0 "The Haldane mission was a successes, it's now possible to fully push for British neutrality in the war and persue our goals in Africa"
 ww1_germanytooltip18:0 "Annually, the positive effects of using war bons and loans will diminish whilst our debt continues to grow."
 
