added TUR_BUL event loc

--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -22,7 +22,10 @@
  BUL_prince_kyril:0 "Prince Kyril"
  multifaceted_old_hand:0 "Multifaceted Old-Hand"
  serbo_bulgarian_defence_agreement:0 "Serbo-Bulgarian Defense Agreement"
- 
+
+## Decisions ##
+
+
  ##################
  # BULGARIA FOCUS #
  ##################
@@ -466,6 +469,30 @@ ww1_BUL_TUR.61.a:0 "Interesting"
 ww1_BUL_TUR.62.t:0 "W.T Stead's Doubts on the Young Turk Administration"
 ww1_BUL_TUR.62.d:0 "W.T Stead was originally in favor of the Young Turkish administration, but as the war in Libya drags on and the massacres of Christians within the Ottoman Empire continue, he has become disillusioned with the new rulers. He now calls them no better than Sultan Abdulhamid's reign, and urges Ivan Geshov to be cautious when negotiating with Nasim Bey and to be wary of a false sense of security."
 ww1_BUL_TUR.62.a:0 "Concerning News"
+
+ww1_BUL_TUR.57.t:0 "The Ottomans Grant an Autonomous Macedonia!"
+ww1_BUL_TUR.57.d:0 "After prolonged negotiations, the Ottoman Empire has agreed to grant Bulgaria a form of control over Macedonia, establishing it as an autonomous region. Although the arrangement is short of full independence, it is a considerable victory for Bulgarian diplomacy and a step toward greater influence in the Balkans. The news has sparked a mixture of celebration and tension among the Bulgarian populace and government."
+ww1_BUL_TUR.57.a:0 "Fabulous!"
+
+ww1_BUL_TUR.63.t:0 "Bulgaria is Ready to Wrap Up Negotiations"
+ww1_BUL_TUR.63.d:0 "Following recent discussions, Bulgaria appears prepared to finalize the current negotiations with the Ottoman Empire. This step could solidify relations and improve Bulgarian influence in the region, especially regarding Macedonia and Bulgarian communities in Ottoman lands."
+ww1_BUL_TUR.63.a:0 "Sounds Good"
+ww1_BUL_TUR.63.b:0 "We're Not Ready"
+
+ww1_BUL_TUR.64.t:0 "Nasim Bey Isn't Ready to Conclude Negotiations"
+ww1_BUL_TUR.64.d:0 "Nasim Bey, the Ottoman diplomat overseeing the discussions, has indicated that the Ottoman Empire is not yet prepared to finalize the negotiations. This delay could be strategic or a sign of internal resistance to Bulgaria's demands."
+ww1_BUL_TUR.64.a:0 "Okay"
+ww1_BUL_TUR.64.b:0 "Unacceptable – Cease Negotiations"
+
+ww1_BUL_TUR.65.t:0 "Nasim Bey is Ready to Wrap up Relations"
+ww1_BUL_TUR.65.d:0 "After careful consideration, Nasim Bey has signaled the Ottoman Empire's readiness to finalize the agreements with Bulgaria. This could solidify the relationship between the two countries or pave the way for further diplomatic efforts in the Balkans."
+ww1_BUL_TUR.65.a:0 "Sure"
+ww1_BUL_TUR.65.b:0 "We're not ready to conclude negotiations"
+
+ww1_BUL_TUR.66.t:0 "Ivan Geshov Isn't Ready to Wrap Up Negotiations"
+ww1_BUL_TUR.66.d:0 "Ivan Geshov, the Bulgarian representative, has indicated that Bulgaria is not yet prepared to conclude negotiations with the Ottoman Empire. This delay could be due to unresolved issues or strategic considerations regarding Bulgaria’s position in the Balkans."
+ww1_BUL_TUR.66.a:0 "Ok"
+ww1_BUL_TUR.66.b:0 "Cease negotiations"
 
  ###Ideas Loc###
  #BULGARIA
