Wartime OHL BoP, TBC

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -413,6 +413,14 @@ conservatives_content:0 "Conservatives Content"
 nationalists_dominant:0 "Nationalists Dominant"
 nationalists_content:0 "Nationalists Content"
 
+#Balance of Power - OHL/Civllian Government
+GER_civilian_government_vs_ohl:0 "Power Struggle over the Reich"
+GER_GER_civilian_vs_ohl_balanced:0 "Conflicting Powers"
+civilian_dominant:0 "Civilian Government Dominant"
+civilian_empowered:0 "Civilian Government Empowered"
+ohl_dominant:0 "OHL Dominant"
+ohl_empowered:0 "OHL Empowered"
+
 #Economic Actions
 GER_economic_actions:0 "Economic Actions"
 GER_finance_berlin_military_complex:0 "Finance Berlin's Military Complex"
