--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -5914,8 +5914,8 @@
  TUR_ittihadists_destroyed_desc:0 "После отставки Ахмеда Мухтар-паши и создания правительства Мехмеда Камиль-паши иттихадисты начали подготовку к захвата парламента и Великой Порты. Но благодаря нашим действиям и усилиям в нужное время и в нужном месте мы предотвратили переворот. Теперь пришло время решить судьбу ИТФ."
  TUR_eradicate_ittihadists: "Избавиться от генералов путчистов"
  TUR_eradicate_ittihadists_desc:0 "Однажды они уже пытались свергнуть наше правительство, они могут попытаться снова при любом удобном случае. Пока мы мы можем уничтожить их, мы должны искоренить генералов, ответственных за попытку переворота."
- TUR_end_martial_law: "Провести Выборы руководства"
- TUR_end_martial_law_desc:0 "[TUR.hifleaderelections]"
+ TUR_elections_of_1912: "Провести Выборы руководства"
+ TUR_elections_of_1912_desc:0 "[TUR.hifleaderelections]"
  hifleaderelections1: "Чтобы победить на выборах у Иттихат ве Теракки Фыркасы, мы выдвинули нашего самого влиятельного кандидата без надлежащего голосования. Теперь, когда мы наконец закрепили за собой место в правительстве, мы можем провести полноценные выборы для определения руководства."
  hifleaderelections2: "После скорой отставки Ахмеда Мухтар-паши он уступил свое место Мехмеду Камиль-паше, даже не проведя надлежащего голосования. Теперь, когда мы наконец закрепили за собой место в правительстве, мы можем провести надлежащие выборы для определения руководства."
  TUR_free_press: "Отменить цензуру для Свободы Слова"
