--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -829,7 +829,6 @@
  VICTORY_POINTS_382: "Kaluga"
  VICTORY_POINTS_9197: "Volkhov"
  VICTORY_POINTS_4354: "Sterlitamak"
- VICTORY_POINTS_10256: "Magnitogorsk"
  VICTORY_POINTS_6502: "Balakovo"
  VICTORY_POINTS_10312: "Kostanay"
  VICTORY_POINTS_11537: "Ural'sk"
@@ -1030,8 +1029,8 @@
  VICTORY_POINTS_108: "Syktyvkar"
  VICTORY_POINTS_11617: "Sukhumi"
  VICTORY_POINTS_11614: "Nalchik"
- VICTORY_POINTS_11523: "Engels"
- VICTORY_POINTS_9432: "Marksshtadt"
+ VICTORY_POINTS_11523: "Pokrovsk"
+ VICTORY_POINTS_9432: "Katharinenstadt"
  VICTORY_POINTS_1573: "Bukhara"
  VICTORY_POINTS_1554: "Navoi"
  VICTORY_POINTS_1493: "Tashauz"
