--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -833,7 +833,6 @@
  VICTORY_POINTS_10312: "Kostanay"
  VICTORY_POINTS_11537: "Ural'sk"
  VICTORY_POINTS_3618: "Guryev"
- VICTORY_POINTS_392: "Ulyanovsk"
  VICTORY_POINTS_9258: "Penza"
  VICTORY_POINTS_6269: "Ivanovo"
  VICTORY_POINTS_6398: "Lipetsk"
@@ -879,7 +878,7 @@
  VICTORY_POINTS_7789: "Tomsk"
  VICTORY_POINTS_7757: "Kemerovo"
  VICTORY_POINTS_7822: "Novokuznetsk"
- VICTORY_POINTS_6124: "Kirov"
+ VICTORY_POINTS_6124: "Vykata"
  VICTORY_POINTS_9680: "Kerch"
  VICTORY_POINTS_6704: "Yalta"
  VICTORY_POINTS_10056: "Mersin"
@@ -1034,7 +1033,6 @@
  VICTORY_POINTS_1573: "Bukhara"
  VICTORY_POINTS_1554: "Navoi"
  VICTORY_POINTS_1493: "Tashauz"
- VICTORY_POINTS_6278: "Izhevsk"
  VICTORY_POINTS_9259: "Cheboksary"
  VICTORY_POINTS_9402: "Yoshkar-Ola"
  VICTORY_POINTS_3757: "Balta"
@@ -1907,6 +1905,38 @@
  VICTORY_POINTS_1104: "Yantai" #延吉
  VICTORY_POINTS_4556: "Maseru"
  VICTORY_POINTS_12113: "Tanjung Pinang"
+ VICTORY_POINTS_7228: "Nizhny Tagil"
+ VICTORY_POINTS_12287: "Verkhneufaleisky"
+ VICTORY_POINTS_6226: "Syzran"
+ VICTORY_POINTS_392: "Simbirsk"
+ VICTORY_POINTS_6357: "Alatyr"
+ VICTORY_POINTS_380: "Kuznetsk"
+ VICTORY_POINTS_3477: "Volsk"
+ VICTORY_POINTS_6101: "Rybinsk"
+ VICTORY_POINTS_11110: "Kotlas"
+ VICTORY_POINTS_6174: "Kolpino"
+ VICTORY_POINTS_280: "Vladimir"
+ VICTORY_POINTS_3190: "Kostroma"
+ VICTORY_POINTS_9257: "Kineshma"
+ VICTORY_POINTS_357: "Kovrov"
+ VICTORY_POINTS_12244: "Votkinsk"
+ VICTORY_POINTS_6278: "Izhevsk"
+ VICTORY_POINTS_314: "Ryazhsk"
+ VICTORY_POINTS_3332: "Kirsanov"
+ VICTORY_POINTS_10142: "Katav-Ivanovsk"
+ VICTORY_POINTS_11408: "Balashov"
+ VICTORY_POINTS_6587: "Borisoglebsk"
+ VICTORY_POINTS_579: "Archeda"
+ VICTORY_POINTS_6718: "Pyatigorsk"
+ VICTORY_POINTS_3658: "Kutaisi"
+ VICTORY_POINTS_11464: "Kazatin"
+ VICTORY_POINTS_6605: "Mirgorod"
+ VICTORY_POINTS_6565: "Putivl"
+ VICTORY_POINTS_371: "Klintsy"
+ VICTORY_POINTS_294: "Borisov"
+ VICTORY_POINTS_3556: "Pinsk"
+ VICTORY_POINTS_3452: "Elisavetgrad"
+ VICTORY_POINTS_3376: "Yefremov"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
