--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -397,7 +397,7 @@
  STATE_396: "Indiana"
  STATE_397: "Kostroma"
  STATE_398: "Perm"
- STATE_399: "Sarapul"
+ STATE_399: "Izhevsk"
  STATE_400: "Vyatka"
  STATE_401: "Pokrovsk"
  STATE_402: "Turgay"
